--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,6 @@
 name = "rust-code"
 version = "0.0.1"
 authors = ["Robin Gloster <robin@loc-com.de>"]
+
+[dependencies.sql_generator]
+path = "sql_generator"
